--- a/templates/vrachtwagenParkeren-ap.j2
+++ b/templates/vrachtwagenParkeren-ap.j2
@@ -2,9 +2,8 @@
 
 {% block summary %}
 <p>Het implementatiemodel OSLO Vrachtwagenparkeren toont hoe termen uit het overeenstemmend vocabularium gebruikt moeten worden om gegevens uit te wisselen omtrent vrachtwagenparkeren.</p>
-<p>Deze standaard is ontstaan vanuit het Machine Learning as a Service-project, <a href=https://www.vlaio.be/nl/vlaio-netwerk/city-things-slimme-steden-en-gemeenten>City of Things</a>. Met het Machine Learning as a Service-project willen de initiatiefnemers, waaronder IGEMO, kennis en ervaring verder uitbouwen en de algoritmes en processen tegelijkertijd ter beschikking stellen voor ieder bestuur, gaande van het kleinste lokaal bestuur tot bovenlokale overheden als Vlaanderen.</p>
+<p>Deze standaard is ontstaan vanuit het Slim Vrachtwagenparkeren-project, <a href=https://www.vlaio.be/nl/vlaio-netwerk/city-things-slimme-steden-en-gemeenten/city-things#:~:text=Slim%20Vrachtwagenparkeren&text=Het%20aantal%20uren%20dat%20een,om%20twee%20problemen%20te%20benoemen.</a>. Met Vrachtwagenparkeren willen de initiatiefnemers, waaronder IGEMO, kennis en ervaring delen om een digitaal hulpmiddel te ontwikkelen dat bijdraagt aan de creatie van een duurzame relatie tussen vrachtwagenchauffeurs en terreineigenaars</p>
 <p>Het model bestaat uit verschillende onderdelen die werden hergebruikt uit bestaande standaarden.</p>
 <p>Het eerste deel van het model bespreekt de vrachtwagen en hoe deze op een bepaalde parkeerplaats terecht kan. Om dit proces te verduidelijken, wordt gebruik gemaakt van klassen zoals Route, Parkeerplaats en Aanbieder.</p>
-<p>Het tweede deel van het model behandelt de incentivering voor organisaties om het model in gebruik te nemen. Zo kan er via de klasse Stimulansaanbod een Beloning uitgekeerd worden.</p> 
 <p>Enumeraties worden in principe buiten het applicatieprofiel beschreven, de in het diagram weergegeven enumeratiewaarden zijn dus illustratief.
 {% endblock %}
