--- a/templates/vrachtwagenParkeren-ap.j2
+++ b/templates/vrachtwagenParkeren-ap.j2
@@ -2,8 +2,8 @@
 
 {% block summary %}
 <p>Het implementatiemodel OSLO Vrachtwagenparkeren toont hoe termen uit het overeenstemmend vocabularium gebruikt moeten worden om gegevens uit te wisselen omtrent vrachtwagenparkeren.</p>
-<p>Deze standaard is ontstaan vanuit het Slim Vrachtwagenparkeren-project, <a href=https://www.vlaio.be/nl/vlaio-netwerk/city-things-slimme-steden-en-gemeenten/city-things#:~:text=Slim%20Vrachtwagenparkeren&text=Het%20aantal%20uren%20dat%20een,om%20twee%20problemen%20te%20benoemen.</a>. Met Vrachtwagenparkeren willen de initiatiefnemers, waaronder IGEMO, kennis en ervaring delen om een digitaal hulpmiddel te ontwikkelen dat bijdraagt aan de creatie van een duurzame relatie tussen vrachtwagenchauffeurs en terreineigenaars</p>
+<p>Deze standaard is ontstaan vanuit het <a href="https://www.vlaio.be/nl/vlaio-netwerk/city-things-slimme-steden-en-gemeenten/city-things#:~:text=Slim%20Vrachtwagenparkeren">Slim Vrachtwagenparkeren-project</a>, met Vrachtwagenparkeren willen de initiatiefnemers, waaronder IGEMO, kennis en ervaring delen om een digitaal hulpmiddel te ontwikkelen dat bijdraagt aan de creatie van een duurzame relatie tussen vrachtwagenchauffeurs en terreineigenaars</p>
 <p>Het model bestaat uit verschillende onderdelen die werden hergebruikt uit bestaande standaarden.</p>
 <p>Het eerste deel van het model bespreekt de vrachtwagen en hoe deze op een bepaalde parkeerplaats terecht kan. Om dit proces te verduidelijken, wordt gebruik gemaakt van klassen zoals Route, Parkeerplaats en Aanbieder.</p>
-<p>Enumeraties worden in principe buiten het applicatieprofiel beschreven, de in het diagram weergegeven enumeratiewaarden zijn dus illustratief.
+<p>Enumeraties worden in principe buiten het applicatieprofiel beschreven, de in het diagram weergegeven enumeratiewaarden zijn dus illustratief.</p>
 {% endblock %}
